--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@ MENU
 				</div>
 				<div class="elementor-element elementor-element-fc88b0c elementor-widget elementor-widget-heading" data-id="fc88b0c" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<span class="elementor-heading-title elementor-size-default">48.325.852/0001-85</span>				</div>
+								</div>
 				</div>
 					</div>
 		</div>
@@ -1001,8 +1001,7 @@ MENU
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-48ad5e45 elementor-widget-divider--view-line elementor-widget elementor-widget-divider" data-id="48ad5e45" data-element_type="widget" data-widget_type="divider.default">
 				<div class="elementor-widget-container">
-							<div class="elementor-divider">
-			<span class="elementor-divider-separator">
+							
 						</span>
 		</div>
 						</div>
